--- a/UpgradeOpenCascade/UpgradeOpenCascade.vcxproj.filters
+++ b/UpgradeOpenCascade/UpgradeOpenCascade.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="VrmlData_Geometry.cxx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VrmlData_IndexedFaceSet.cxx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
