--- a/UpgradeOpenCascade/UpgradeOpenCascade.vcxproj
+++ b/UpgradeOpenCascade/UpgradeOpenCascade.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="RWGltf_CafWriter.cpp" />
     <ClCompile Include="VrmlData_Geometry.cxx" />
     <ClCompile Include="VrmlData_IndexedFaceSet.cxx" />
+    <ClCompile Include="VrmlData_IndexedLineSet.cxx" />
     <ClCompile Include="VrmlData_Node.cxx" />
     <ClCompile Include="VrmlData_Scene.cxx" />
   </ItemGroup>
