--- a/UpgradeOpenCascade/UpgradeOpenCascade.vcxproj
+++ b/UpgradeOpenCascade/UpgradeOpenCascade.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClInclude Include="RWGltf_CafWriter.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="FileName.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
